@@ -1,7 +1,7 @@
 Sector/Cluster,Subsector,Organización,Sex,Targeted,País,Departamento/Provincia/Estado,Current status
 #sector,#subsector,#org,#population+sex,#targeted,#country,#adm1,#status
-WASH,Higiene,ACNUR,Hombres,100,Panamá,Los Santos,activo
-WASH,Higiene,ACNUR,Mujeres,100,Panamá,Los Santos,activo
+WASH,Higiene,ACNUR,Hombres,100,Panamá,Los Santos,
+WASH,Higiene,ACNUR,Mujeres,100,Panamá,Los Santos,
 Salud,Vacunación,OMS,Hombres,,Colombia,Cauca,activo
 Salud,Vacunación,OMS,Mujeres,,Colombia,Cauca,activo
 Educación,Formación de enseñadores,UNICEF,Hombres,250,Colombia,Chocó,inactivo
